--- a/README.Rmd
+++ b/README.Rmd
@@ -1,39 +1,43 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # IWMM
 
 <!-- badges: start -->
-
 <!-- badges: end -->
 
 An R package to perform importance weighted moment matching.
 
-The method is described in detail in Paananen et al.
-(2020).
+The method is described in detail in Paananen et al. (2020).
 
 ## Installation
 
 <!-- You can install the released version of IWMM from [CRAN](https://CRAN.R-project.org) with: -->
 
 <!-- ``` r -->
-
 <!-- install.packages("IWMM") -->
-
 <!-- ``` -->
 
 <!-- And the development version from [GitHub](https://github.com/) with: -->
 
 <!-- ``` r -->
-
 <!-- # install.packages("devtools") -->
-
 <!-- devtools::install_github("topipa/IWMM") -->
-
 <!-- ``` -->
 
-You can install the the development version from
-[GitHub](https://github.com/) with:
+You can install the the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -45,19 +49,14 @@ devtools::install_github("topipa/IWMM")
 <!-- This is a basic example which shows you how to solve a common problem: -->
 
 <!-- ```{r example} -->
-
 <!-- library(IWMM) -->
-
 <!-- ## basic example code -->
-
 <!-- ``` -->
 
 <!-- What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so: -->
 
 <!-- ```{r cars} -->
-
 <!-- summary(cars) -->
-
 <!-- ``` -->
 
 <!-- You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. -->
@@ -65,9 +64,7 @@ devtools::install_github("topipa/IWMM")
 <!-- You can also embed plots, for example: -->
 
 <!-- ```{r pressure, echo = FALSE} -->
-
 <!-- plot(pressure) -->
-
 <!-- ``` -->
 
 <!-- In that case, don't forget to commit and push the resulting figure files, so they display on GitHub! -->
@@ -76,5 +73,5 @@ devtools::install_github("topipa/IWMM")
 
 Paananen, T., Piironen, J., Bürkner, P.-C., and Vehtari, A. (2020).
 Implicitly Adaptive Importance Sampling. *Statistics and Computing*,
-accepted for publication. ([arXiv
-Preprint](https://arxiv.org/abs/1906.08850))
+accepted for publication.
+([arXiv Preprint](https://arxiv.org/abs/1906.08850))
