--- a/README.Rmd
+++ b/README.Rmd
@@ -16,10 +16,11 @@ knitr::opts_chunk$set(
 # IWMM
 
 <!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+[![CRAN status](https://www.r-pkg.org/badges/version/powersense)](https://CRAN.R-project.org/package=IWMM)
 <!-- badges: end -->
 
 An R package to perform importance weighted moment matching.
-
 The method is described in detail in Paananen et al. (2020).
 
 ## Installation
@@ -74,4 +75,6 @@ devtools::install_github("topipa/IWMM")
 Paananen, T., Piironen, J., Bürkner, P.-C., and Vehtari, A. (2020).
 Implicitly Adaptive Importance Sampling. *Statistics and Computing*,
 accepted for publication.
-([arXiv Preprint](https://arxiv.org/abs/1906.08850))
+([arXiv Preprint](https://arxiv.org/abs/1906.08850))([code](https://github.com/topipa/iter-mm-paper))
+
+
