Rename IWMM -> iwmm

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# IWMM
+# iwmm
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
-[![CRAN status](https://www.r-pkg.org/badges/version/powersense)](https://CRAN.R-project.org/package=IWMM)
+[![CRAN status](https://www.r-pkg.org/badges/version/powersense)](https://CRAN.R-project.org/package=iwmm)
 <!-- badges: end -->
 
 An R package to perform importance weighted moment matching.
@@ -25,24 +25,24 @@ The method is described in detail in Paananen et al. (2020).
 
 ## Installation
 
-<!-- You can install the released version of IWMM from [CRAN](https://CRAN.R-project.org) with: -->
+<!-- You can install the released version of iwmm from [CRAN](https://CRAN.R-project.org) with: -->
 
 <!-- ``` r -->
-<!-- install.packages("IWMM") -->
+<!-- install.packages("iwmm") -->
 <!-- ``` -->
 
 <!-- And the development version from [GitHub](https://github.com/) with: -->
 
 <!-- ``` r -->
 <!-- # install.packages("devtools") -->
-<!-- devtools::install_github("topipa/IWMM") -->
+<!-- devtools::install_github("topipa/iwmm") -->
 <!-- ``` -->
 
 You can install the the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("topipa/IWMM")
+devtools::install_github("topipa/iwmm")
 ```
 
 <!-- ## Example -->
@@ -50,7 +50,7 @@ devtools::install_github("topipa/IWMM")
 <!-- This is a basic example which shows you how to solve a common problem: -->
 
 <!-- ```{r example} -->
-<!-- library(IWMM) -->
+<!-- library(iwmm) -->
 <!-- ## basic example code -->
 <!-- ``` -->
 
