--- a/vignettes/importance_sampling_bootstrap.Rmd
+++ b/vignettes/importance_sampling_bootstrap.Rmd
@@ -81,7 +81,7 @@ transformed parameters {
   sigma = exp(logsigma);
 }
 model {
-  x ~ normal(mu,sigma);
+  x ~ normal(mu, sigma);
 }
 generated quantities {
   vector[N] log_lik;
@@ -105,7 +105,7 @@ we compute the log-likelihood for each observation in the
 First we simulate Gaussian data and fit the correctly specified model with
 Stan using the rstan package:
 
-```{r modelfit1, message=FALSE, echo=T, results='hide'}
+```{r modelfit1, message=FALSE, echo=T, results="hide"}
 stanmodel <- stan_model(model_code = stancode)
 
 # generate  data
@@ -116,7 +116,7 @@ standata <- list(N = n, x = x)
 stanfit <- sampling(stanmodel, data = standata, refresh = 0)
 
 # extract posterior and log-likelihood draws
-post <- as.data.frame(stanfit)[,1:2]
+post <- as.data.frame(stanfit)[, 1:2]
 S <- nrow(post)
 ll <- loo::extract_log_lik(stanfit)
 ```
@@ -131,21 +131,21 @@ sampling, we compute the Pareto k diagnostics (See Vehtari et al. (2017) for det
 bs_S <- 5
 
 # compute Bootstrap weights
-obs_ws <- apply(matrix(seq(bs_S)), 1, function(x) {c(rmultinom(1,n,prob = rep(1,n)/n))})
+obs_ws <- apply(matrix(seq(bs_S)), 1, function(x) {c(rmultinom(1, n, prob = rep(1, n) / n))})
 
-bs_postmeans_is <- matrix(0,bs_S,2)
-ks <- rep(0,bs_S)
+bs_postmeans_is <- matrix(0, bs_S, 2)
+ks <- rep(0, bs_S)
 
 iw_list <- parallel::mclapply(X = seq(bs_S), mc.cores = CORES, FUN = function(i) {
-  obs_w_matrix <- matrix(obs_ws[,i],S,n, byrow = TRUE)
+  obs_w_matrix <- matrix(obs_ws[, i], S, n, byrow = TRUE)
   lw <- rowSums((obs_w_matrix - 1) * ll)
   lw <- lw - matrixStats::logSumExp(lw)
   psis <- psis(lw)
-  c(colSums(exp(lw) * post),psis$diagnostics$pareto_k)
+  c(colSums(exp(lw) * post), psis$diagnostics$pareto_k)
 })
 
-iw_list <- array(as.numeric(unlist(iw_list)),c(3,bs_S))
-ks <- iw_list[3,]
+iw_list <- array(as.numeric(unlist(iw_list)), c(3, bs_S))
+ks <- iw_list[3, ]
 ```
 
 Let us plot the Pareto k diagnostics to see if the importance sampling accuracy can be trusted:
@@ -179,9 +179,9 @@ log_lik_stanfit <- function(stanfit, upars, parameter_name = "log_lik",
     ll <- loo::extract_log_lik(stanfit, parameter_name, merge_chains = TRUE)
     S <- nrow(upars)
     n <- ncol(ll)
-    out <- matrix(0,S,n)
+    out <- matrix(0, S, n)
     for (s in seq_len(S)) {
-      out[s,] <- rstan::constrain_pars(stanfit, upars = upars[s, ])[[parameter_name]]
+      out[s, ] <- rstan::constrain_pars(stanfit, upars = upars[s, ])[[parameter_name]]
     }
     out
 }
@@ -193,18 +193,20 @@ ratio_density <- function(draws, stanfit, obs_weights, ...) {
 ```
 
 ```{r iwmm1, warning = FALSE}
-bs_postmeans_is_mm <- matrix(0,bs_S,2)
-ks_mm <- rep(0,bs_S)
+bs_postmeans_is_mm <- matrix(0, bs_S, 2)
+ks_mm <- rep(0, bs_S)
 
 
 iw_list <- parallel::mclapply(X = seq(bs_S), mc.cores = CORES, FUN = function(i) {
-  iw <- moment_match(stanfit, log_ratio_fun = ratio_density, obs_weights = obs_ws[,i])
-  c(matrixStats::colWeightedMeans(posterior::as_draws_matrix(iw$draws)[,c("mu", "logsigma")], exp(iw$log_weights)),iw$pareto_k)
+  iw <- moment_match(stanfit, log_ratio_fun = ratio_density, obs_weights = obs_ws[, i])
+  c(matrixStats::colWeightedMeans(
+    posterior::as_draws_matrix(iw$draws)[, c("mu", "logsigma")],
+    exp(iw$log_weights)), iw$pareto_k)
 })
-iw_list <- array(as.numeric(unlist(iw_list)),c(3,bs_S))
+iw_list <- array(as.numeric(unlist(iw_list)), c(3, bs_S))
 
-bs_postmeans_is_mm <- data.frame("mu" = iw_list[1,], "logsigma" = iw_list[2,])
-ks_mm <- iw_list[3,]
+bs_postmeans_is_mm <- data.frame("mu" = iw_list[1, ], "logsigma" = iw_list[2, ])
+ks_mm <- iw_list[3, ]
 ```
 
 Let us check the Pareto k diagnostic values :
@@ -212,14 +214,14 @@ Let us check the Pareto k diagnostic values :
 ```{r plotk2}
 plot(sort(ks),
      pch = 20,
-     ylim = c(min(ks_mm),max(ks)),
-     col = 'black',
+     ylim = c(min(ks_mm), max(ks)),
+     col = "black",
      xlab = "Bootstrap index",
      ylab = "Pareto k",
      main = "Pareto k diagnostics")
-points(ks_mm[order(ks)], col = 'green',pch = 20)
-points(c(-1,1000),c(0.5,0.5), type = 'l')
-legend("topleft",legend = c("IS","IWMM"), col = c('black','green'), pch = 20)
+points(ks_mm[order(ks)], col = "green", pch = 20)
+points(c(-1, 1000), c(0.5, 0.5), type = "l")
+legend("topleft", legend = c("IS", "IWMM"), col = c("black", "green"), pch = 20)
 ```
 
 Now all values are below 0.5, so the Bootstrap means should be accurate.
@@ -227,31 +229,31 @@ Let us plot both the original posterior samples and the Bootstrap posterior mean
 
 ```{r plotdraws1}
 hist(post$mu,
-     col=rgb(0,0,1,1/4),
+     col = rgb(0, 0, 1, 1 / 4),
      freq = FALSE,
-     ylim = c(0,25),
+     ylim = c(0, 25),
      xlab = "mu",
      ylab = "count",
      main = "Posterior of mu")
-hist(bs_postmeans_is_mm$mu, col=rgb(1,0,0,1/4), add = T, freq = FALSE)
-legend("topright",legend = c("model posterior","Bootstrap posterior means"),
-       fill = c(rgb(0,0,1,1/4),rgb(1,0,0,1/4)))
+hist(bs_postmeans_is_mm$mu, col = rgb(1, 0, 0, 1 / 4), add = TRUE, freq = FALSE)
+legend("topright", legend = c("model posterior", "Bootstrap posterior means"),
+       fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4)))
 
 ```
 
 ```{r plotdraws2}
 hist(post$logsigma,
-     col=rgb(0,0,1,1/4),
+     col = rgb(0, 0, 1, 1 / 4),
      freq = FALSE,
-     ylim = c(0,50),
+     ylim = c(0, 50),
      xlab = "log(sigma)",
      ylab = "count",
      main = "Posterior of log(sigma)",
-     breaks = seq(-0.1,0.15, length.out = 30))
-hist(bs_postmeans_is_mm$logsigma, col=rgb(1,0,0,1/4), add = T, freq = FALSE,
-     breaks = seq(-0.1,0.15, length.out = 30))
-legend("topright",legend = c("model posterior","Bootstrap posterior means"),
-       fill = c(rgb(0,0,1,1/4),rgb(1,0,0,1/4)))
+     breaks = seq(-0.1, 0.15, length.out = 30))
+hist(bs_postmeans_is_mm$logsigma, col = rgb(1, 0, 0, 1 / 4), add = TRUE, freq = FALSE,
+     breaks = seq(-0.1, 0.15, length.out = 30))
+legend("topright", legend = c("model posterior", "Bootstrap posterior means"),
+       fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4)))
 
 ```
 
@@ -272,7 +274,7 @@ standata <- list(N = n, x = x)
 stanfit <- sampling(stanmodel, data = standata, refresh = 0)
 
 # extract posterior and log-likelihood draws
-post <- as.data.frame(stanfit)[,1:2]
+post <- as.data.frame(stanfit)[, 1:2]
 S <- nrow(post)
 ll <- loo::extract_log_lik(stanfit)
 ```
@@ -282,17 +284,19 @@ ll <- loo::extract_log_lik(stanfit)
 
 ```{r iwmm2, warning = FALSE}
 
-bs_postmeans_is_mm <- matrix(0,bs_S,2)
-ks_mm <- rep(0,bs_S)
+bs_postmeans_is_mm <- matrix(0, bs_S, 2)
+ks_mm <- rep(0, bs_S)
 
 iw_list <- parallel::mclapply(X = seq(bs_S), mc.cores = CORES, FUN = function(i) {
-  iw <- moment_match(stanfit, log_ratio_fun = ratio_density, obs_weights = obs_ws[,i])
-  c(matrixStats::colWeightedMeans(posterior::as_draws_matrix(iw$draws)[,c("mu", "logsigma")], exp(iw$log_weights)),iw$pareto_k)
+  iw <- moment_match(stanfit, log_ratio_fun = ratio_density, obs_weights = obs_ws[, i])
+  c(matrixStats::colWeightedMeans(
+    posterior::as_draws_matrix(iw$draws)[, c("mu", "logsigma")],
+    exp(iw$log_weights)), iw$pareto_k)
 })
-iw_list <- array(as.numeric(unlist(iw_list)),c(3,bs_S))
+iw_list <- array(as.numeric(unlist(iw_list)), c(3, bs_S))
 
-bs_postmeans_is_mm <- data.frame("mu" = iw_list[1,], "logsigma" = iw_list[2,])
-ks_mm <- iw_list[3,]
+bs_postmeans_is_mm <- data.frame("mu" = iw_list[1, ], "logsigma" = iw_list[2, ])
+ks_mm <- iw_list[3, ]
 ```
 
 
@@ -301,14 +305,14 @@ Let us check the Pareto k diagnostic values :
 ```{r plotk3}
 plot(sort(ks_mm),
      pch = 20,
-     ylim = c(min(ks_mm),max(ks_mm)),
-     col = 'green',
+     ylim = c(min(ks_mm), max(ks_mm)),
+     col = "green",
      xlab = "Bootstrap index",
      ylab = "Pareto k",
      main = "Pareto k diagnostics")
-# points(ks_mm[order(ks)], col = 'green',pch = 20)
-points(c(-1,1000),c(0.5,0.5), type = 'l')
-legend("topleft",legend = c("IS","IWMM"), col = c('black','green'), pch = 20)
+# points(ks_mm[order(ks)], col = "green", pch = 20)
+points(c(-1, 1000), c(0.5, 0.5), type = "l")
+legend("topleft", legend = c("IS", "IWMM"), col = c("black", "green"), pch = 20)
 
 ```
 
@@ -317,33 +321,32 @@ Let us plot both the original posterior samples and the Bootstrap posterior mean
 
 ```{r plotdraws3}
 hist(post$mu,
-     col=rgb(0,0,1,1/4),
+     col = rgb(0, 0, 1, 1 / 4),
      freq = FALSE,
-     ylim = c(0,25),
+     ylim = c(0, 25),
      xlab = "mu",
      ylab = "count",
      main = "Posterior of mu")
-hist(bs_postmeans_is_mm$mu, col=rgb(1,0,0,1/4), add = T, freq = FALSE)
-legend("topright",legend = c("model posterior","Bootstrap posterior means"),
-       fill = c(rgb(0,0,1,1/4),rgb(1,0,0,1/4)))
+hist(bs_postmeans_is_mm$mu, col = rgb(1, 0, 0, 1 / 4), add = TRUE, freq = FALSE)
+legend("topright", legend = c("model posterior", "Bootstrap posterior means"),
+       fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4)))
 ```
 
 ```{r plotdraws4}
 hist(post$logsigma,
-     col=rgb(0,0,1,1/4),
+     col = rgb(0, 0, 1, 1 / 4),
      freq = FALSE,
-     ylim = c(0,50),
+     ylim = c(0, 50),
      xlab = "log(sigma)",
      ylab = "count",
      main = "Posterior of log(sigma)",
-     breaks = seq(0.2,1.0, length.out = 30))
-hist(bs_postmeans_is_mm$logsigma, col=rgb(1,0,0,1/4), add = T, freq = FALSE,
-     breaks = seq(0.2,1.0, length.out = 30))
-legend("topright",legend = c("model posterior","Bootstrap posterior means"),
-       fill = c(rgb(0,0,1,1/4),rgb(1,0,0,1/4)))
+     breaks = seq(0.2, 1.0, length.out = 30))
+hist(bs_postmeans_is_mm$logsigma, col = rgb(1, 0, 0, 1 / 4), add = TRUE, freq = FALSE,
+     breaks = seq(0.2, 1.0, length.out = 30))
+legend("topright", legend = c("model posterior", "Bootstrap posterior means"),
+       fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4)))
 
 ```
-
 
 Now we see that there is a clear difference between the two distributions.
 Because the data is from a $t$-distribution, but we are modelling
@@ -356,14 +359,8 @@ data sets simulated from the model.
 
 ```{r}
 xpred <- extract(stanfit)$xpred
-bayesplot::ppc_dens_overlay(x, xpred[1:100,])
+bayesplot::ppc_dens_overlay(x, xpred[1:100, ])
 ```
-
-
-
-
-
-
 
 ## References
 
