run styler::style_pkg()

--- a/vignettes/importance_sampling_bootstrap.Rmd
+++ b/vignettes/importance_sampling_bootstrap.Rmd
@@ -136,8 +136,10 @@ sampling, we compute the Pareto k diagnostics (See Vehtari et al. (2017) for det
 bs_S <- 5
 
 # compute Bootstrap weights
-obs_ws <- apply(matrix(seq(bs_S)), 1,
-                function(x) c(rmultinom(1, n, prob = rep(1, n) / n)))
+obs_ws <- apply(
+  matrix(seq(bs_S)), 1,
+  function(x) c(rmultinom(1, n, prob = rep(1, n) / n))
+)
 
 bs_postmeans_is <- matrix(0, bs_S, 2)
 ks <- rep(0, bs_S)
@@ -182,23 +184,23 @@ times each observation is included in the Bootstrap sample.
 
 ```{r helper functions, warning = FALSE}
 log_lik_stanfit <- function(fit, upars, parameter_name = "log_lik",
-                                      ...) {
-    ll <- loo::extract_log_lik(fit, parameter_name, merge_chains = TRUE)
-    S <- nrow(upars)
-    n <- ncol(ll)
-    out <- matrix(0, S, n)
-    for (s in seq_len(S)) {
-      out[s, ] <- rstan::constrain_pars(
-        fit,
-        upars = upars[s, ]
-      )[[parameter_name]]
-    }
-    out
+                            ...) {
+  ll <- loo::extract_log_lik(fit, parameter_name, merge_chains = TRUE)
+  S <- nrow(upars)
+  n <- ncol(ll)
+  out <- matrix(0, S, n)
+  for (s in seq_len(S)) {
+    out[s, ] <- rstan::constrain_pars(
+      fit,
+      upars = upars[s, ]
+    )[[parameter_name]]
+  }
+  out
 }
 
 ratio_density <- function(draws, fit, obs_weights, ...) {
-    log_lik <- log_lik_stanfit(fit, draws)
-    colSums((obs_weights - 1) * t(log_lik))
+  log_lik <- log_lik_stanfit(fit, draws)
+  colSums((obs_weights - 1) * t(log_lik))
 }
 ```
 
@@ -215,7 +217,8 @@ iw_list <- lapply(X = seq(bs_S), FUN = function(i) {
   )
   c(matrixStats::colWeightedMeans(
     posterior::as_draws_matrix(iw$draws)[, c("mu", "logsigma")],
-    exp(iw$log_weights)), iw$pareto_k)
+    exp(iw$log_weights)
+  ), iw$pareto_k)
 })
 iw_list <- array(as.numeric(unlist(iw_list)), c(3, bs_S))
 
@@ -227,12 +230,13 @@ Let us check the Pareto k diagnostic values :
 
 ```{r plotk2}
 plot(sort(ks),
-     pch = 20,
-     ylim = c(min(ks_mm), max(ks)),
-     col = "black",
-     xlab = "Bootstrap index",
-     ylab = "Pareto k",
-     main = "Pareto k diagnostics")
+  pch = 20,
+  ylim = c(min(ks_mm), max(ks)),
+  col = "black",
+  xlab = "Bootstrap index",
+  ylab = "Pareto k",
+  main = "Pareto k diagnostics"
+)
 points(ks_mm[order(ks)], col = "green", pch = 20)
 points(c(-1, 1000), c(0.5, 0.5), type = "l")
 legend("topleft", legend = c("IS", "IWMM"), col = c("black", "green"), pch = 20)
@@ -244,33 +248,39 @@ Bootstrap posterior means:
 
 ```{r plotdraws1}
 hist(post$mu,
-     col = rgb(0, 0, 1, 1 / 4),
-     freq = FALSE,
-     ylim = c(0, 25),
-     xlab = "mu",
-     ylab = "count",
-     main = "Posterior of mu")
+  col = rgb(0, 0, 1, 1 / 4),
+  freq = FALSE,
+  ylim = c(0, 25),
+  xlab = "mu",
+  ylab = "count",
+  main = "Posterior of mu"
+)
 hist(bs_postmeans_is_mm$mu, col = rgb(1, 0, 0, 1 / 4), add = TRUE, freq = FALSE)
-legend("topright", legend = c("model posterior", "Bootstrap posterior means"),
-       fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4)))
-
+legend("topright",
+  legend = c("model posterior", "Bootstrap posterior means"),
+  fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4))
+)
 ```
 
 ```{r plotdraws2}
 hist(post$logsigma,
-     col = rgb(0, 0, 1, 1 / 4),
-     freq = FALSE,
-     ylim = c(0, 50),
-     xlab = "log(sigma)",
-     ylab = "count",
-     main = "Posterior of log(sigma)",
-     breaks = seq(-0.1, 0.15, length.out = 30))
-hist(bs_postmeans_is_mm$logsigma, col = rgb(1, 0, 0, 1 / 4),
-     add = TRUE, freq = FALSE,
-     breaks = seq(-0.1, 0.15, length.out = 30))
-legend("topright", legend = c("model posterior", "Bootstrap posterior means"),
-       fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4)))
-
+  col = rgb(0, 0, 1, 1 / 4),
+  freq = FALSE,
+  ylim = c(0, 50),
+  xlab = "log(sigma)",
+  ylab = "count",
+  main = "Posterior of log(sigma)",
+  breaks = seq(-0.1, 0.15, length.out = 30)
+)
+hist(bs_postmeans_is_mm$logsigma,
+  col = rgb(1, 0, 0, 1 / 4),
+  add = TRUE, freq = FALSE,
+  breaks = seq(-0.1, 0.15, length.out = 30)
+)
+legend("topright",
+  legend = c("model posterior", "Bootstrap posterior means"),
+  fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4))
+)
 ```
 
 As we expect from a correctly specified model, the distribution of the
@@ -300,7 +310,6 @@ ll <- loo::extract_log_lik(stanfit)
 ### Compute Bootstrap means using IWMM
 
 ```{r iwmm2, warning = FALSE}
-
 bs_postmeans_is_mm <- matrix(0, bs_S, 2)
 ks_mm <- rep(0, bs_S)
 
@@ -312,7 +321,8 @@ iw_list <- lapply(X = seq(bs_S), FUN = function(i) {
   )
   c(matrixStats::colWeightedMeans(
     posterior::as_draws_matrix(iw$draws)[, c("mu", "logsigma")],
-    exp(iw$log_weights)), iw$pareto_k)
+    exp(iw$log_weights)
+  ), iw$pareto_k)
 })
 iw_list <- array(as.numeric(unlist(iw_list)), c(3, bs_S))
 
@@ -325,16 +335,16 @@ Let us check the Pareto k diagnostic values :
 
 ```{r plotk3}
 plot(sort(ks_mm),
-     pch = 20,
-     ylim = c(min(ks_mm), max(ks_mm)),
-     col = "green",
-     xlab = "Bootstrap index",
-     ylab = "Pareto k",
-     main = "Pareto k diagnostics")
+  pch = 20,
+  ylim = c(min(ks_mm), max(ks_mm)),
+  col = "green",
+  xlab = "Bootstrap index",
+  ylab = "Pareto k",
+  main = "Pareto k diagnostics"
+)
 # points(ks_mm[order(ks)], col = "green", pch = 20)
 points(c(-1, 1000), c(0.5, 0.5), type = "l")
 legend("topleft", legend = c("IS", "IWMM"), col = c("black", "green"), pch = 20)
-
 ```
 
 All diagnostic values are below 0.5, so the Bootstrap means should be accurate.
@@ -342,32 +352,39 @@ Let us plot both the original posterior samples and the Bootstrap posterior mean
 
 ```{r plotdraws3}
 hist(post$mu,
-     col = rgb(0, 0, 1, 1 / 4),
-     freq = FALSE,
-     ylim = c(0, 25),
-     xlab = "mu",
-     ylab = "count",
-     main = "Posterior of mu")
+  col = rgb(0, 0, 1, 1 / 4),
+  freq = FALSE,
+  ylim = c(0, 25),
+  xlab = "mu",
+  ylab = "count",
+  main = "Posterior of mu"
+)
 hist(bs_postmeans_is_mm$mu, col = rgb(1, 0, 0, 1 / 4), add = TRUE, freq = FALSE)
-legend("topright", legend = c("model posterior", "Bootstrap posterior means"),
-       fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4)))
+legend("topright",
+  legend = c("model posterior", "Bootstrap posterior means"),
+  fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4))
+)
 ```
 
 ```{r plotdraws4}
 hist(post$logsigma,
-     col = rgb(0, 0, 1, 1 / 4),
-     freq = FALSE,
-     ylim = c(0, 50),
-     xlab = "log(sigma)",
-     ylab = "count",
-     main = "Posterior of log(sigma)",
-     breaks = seq(0.2, 1.0, length.out = 30))
-hist(bs_postmeans_is_mm$logsigma, col = rgb(1, 0, 0, 1 / 4),
-     add = TRUE, freq = FALSE,
-     breaks = seq(0.2, 1.0, length.out = 30))
-legend("topright", legend = c("model posterior", "Bootstrap posterior means"),
-       fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4)))
-
+  col = rgb(0, 0, 1, 1 / 4),
+  freq = FALSE,
+  ylim = c(0, 50),
+  xlab = "log(sigma)",
+  ylab = "count",
+  main = "Posterior of log(sigma)",
+  breaks = seq(0.2, 1.0, length.out = 30)
+)
+hist(bs_postmeans_is_mm$logsigma,
+  col = rgb(1, 0, 0, 1 / 4),
+  add = TRUE, freq = FALSE,
+  breaks = seq(0.2, 1.0, length.out = 30)
+)
+legend("topright",
+  legend = c("model posterior", "Bootstrap posterior means"),
+  fill = c(rgb(0, 0, 1, 1 / 4), rgb(1, 0, 0, 1 / 4))
+)
 ```
 
 Now we see that there is a clear difference between the two
