improve README and test

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,8 +22,14 @@ knitr::opts_chunk$set(
 [![test-coverage](https://github.com/topipa/iwmm/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/topipa/iwmm/actions/workflows/test-coverage.yaml)
 <!-- badges: end -->
 
-An R package to perform importance weighted moment matching.
-The method is described in detail in the [Implicitly Adaptive Importance Sampling paper](https://doi.org/10.1007/s11222-020-09982-2).
+## Overview
+
+**IWMM** is an R package for adaptive importance sampling. The package implements the
+importance weighted moment matching (IWMM) algorithm.
+Given draws from a probability distribution, IWMM adapts the draws based on a given target distribution and an optional
+expectation function. The draws can, but do not have to be from the distribution over which the expectation is defined.
+
+The method is described in detail in the [Implicitly Adaptive Importance Sampling](https://doi.org/10.1007/s11222-020-09982-2) paper.
 
 ## Installation
 
@@ -71,6 +77,18 @@ devtools::install_github("topipa/iwmm")
 <!-- ``` -->
 
 <!-- In that case, don't forget to commit and push the resulting figure files, so they display on GitHub! -->
+
+## Usage
+
+IWMM takes a sample of draws, and functions that define the proposal and target distributions, as well as an optional
+expectation function. Without an expectation function, the draws are adapted to match the proposal distribution.
+If an expectation function is given, the expectation is computed after adapting the draws specifically for this expectation.
+
+IWMM can also work with models fitted with [rstan](https://github.com/stan-dev/rstan) or [cmdstanr](https://github.com/stan-dev/cmdstanr)
+where the fitted model posterior is treated as the proposal distribution.
+
+### Example
+
 
 ## References
 
