--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,8 @@ knitr::opts_chunk$set(
 )
 ```
 
+<img src='man/figures/logo.png' align="right" height="160" />
+
 # iwmm
 
 <!-- badges: start -->
